# ODZGVisionSystem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  data.rar  filter_graph.c  filter_graph.h  index.html  log_common.h  log_ffmpeg.c  logs  main.c  makefile  makefile-pd  transcoded.mkv  transcoded.webm
CMakeModules/: FindFFmpeg.cmake
data/css/: index.css
data/html/: f  index.css  index.html  inputform.html  list.html
data/html/css/: index.css  list.css
data/html/js/: AudioStream.js  InfoData.js  InfoStream.js  SendingStream.js  SendingStream1.js  SendingStream2.js  Stream1Data.js  Stream2Data.js  StreamData.js  VideoStream.js  form.js  handleAddStream.js  handleAddStreamAudio.js  handleAddStreamVideo.js  handleCodec.js  handleInfoForm.js  handleInputStream.js  handleSink.js  handleStream1Form.js  handleStreamForm.js  handlemultiuri.js
data/js/: InfoStream.js  SendingStream.js  SendingStream1.js  SendingStream2.js  Stream1Data.js  Stream2Data.js  StreamData.js  handleInfoForm.js  handleSink.js  handleStream1Form.js  handleStream2Form.js  handleStreamForm.js  index.js
include/: jsmn  libavcodec  libavdevice  libavfilter  libavformat  libavresample  libavutil  libpostproc  libswresample  libswscale  pistache
lib/: CMakeLists.txt
src/: CMakeLists.txt  app_config.cc  app_config.hh  codec_module.cc  codec_modules.cc  main.cc  test_main.cc  test_main.hh
src/codecs/: codec_module.c  codec_module.cc  codec_module.h  codec_module.hh  codecs.cc  config_generator.cc  config_generator.hh  decodebin_cb.c  discover.cc  discover.hh  filter_graph.cc  filter_graph.h  filter_graph.hh  log_ffmpeg.c  main.c  main.h  makefile  mux.c  mux.h  sink.c  sink.h
src/ffmpeg/: AVCodec.cc  AVCodec.hh  AVFilter.cc  AVFilter.hh  AVPacket.cc  AVPacket.hh
src/rest/: endpoints.cc  endpoints.hh  handler.cc  handler.hh  json_handler.cc  json_handler.hh  path.cc  path.hh
